partially complete server