@@ -6,9 +6,13 @@ package com.kenvix.utils.network.http;
 // Written by Kenvix <i@kenvix.com>
 //--------------------------------------------------
 
+import com.kenvix.utils.network.URL;
+import org.omg.IOP.Encoding;
+
 import javax.naming.OperationNotSupportedException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.nio.ByteBuffer;
+import java.nio.CharBuffer;
+import java.nio.charset.Charset;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Scanner;
@@ -19,19 +23,22 @@ public class HTTPResponseUtils {
     public HTTPResponseUtils(String originalRequestText) {
         this.originalRequestText = originalRequestText;
     }
+    public HTTPResponseUtils(ByteBuffer originalRequestBuffer) {
+        this.originalRequestText = Charset.forName("utf-8").decode(originalRequestBuffer).toString();
+    }
+
+    public HTTPResponseUtils(ByteBuffer originalRequestBuffer, String encoding) {
+        this.originalRequestText = Charset.forName(encoding).decode(originalRequestBuffer).toString();
+    }
 
     public HTTPResponse constructResponse(int code) {
         return new HTTPResponse(code);
     }
 
-    public URI parseOriginalRequestIntoURI() throws IllegalArgumentException, IllegalStateException, OperationNotSupportedException {
+    public URL parseOriginalRequestIntoURL() throws IllegalArgumentException, IllegalStateException {
         Scanner scanner = new Scanner(originalRequestText);
         scanner.next();
         String data = scanner.next();
-        try {
-            return new URI(data);
-        } catch (URISyntaxException e) {
-            throw new IllegalArgumentException(e);
-        }
+        return new URL(data);
     }
 }
